--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url("dark-background4.png");
+  background-image: url("/dark-background4.png");
   background-size: cover;
   background-position: center;
 }
